// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RadioField rendering tests RadioField - required false - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="name-1"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive mb-1"
      data-error="false"
      data-slot="form-label"
      for="_r_0_-form-item"
    >
      Test Radio
    </label>
    <p
      class="text-muted-foreground text-sm"
      data-slot="form-description"
      id="_r_0_-form-item-description"
    >
       
      This is a test description
    </p>
    <div
      aria-describedby="_r_0_-form-item-description"
      aria-invalid="false"
      aria-required="false"
      class="gap-3 flex flex-col space-y-1"
      data-slot="form-control"
      dir="ltr"
      id="_r_0_-form-item"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 1"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 1"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 1"
        >
          Option 1
        </label>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 2"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 2"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 2"
        >
          Option 2
        </label>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 3"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 3"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 3"
        >
          Option 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioField rendering tests RadioField - required true - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="name-1"
  >
    <label
      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive mb-1 gap-1"
      data-error="false"
      data-slot="form-label"
      for="_r_4_-form-item"
    >
      Test Radio
      <span
        class="text-destructive"
      >
        *
      </span>
    </label>
    <p
      class="text-muted-foreground text-sm"
      data-slot="form-description"
      id="_r_4_-form-item-description"
    >
       
      This is a test description
    </p>
    <div
      aria-describedby="_r_4_-form-item-description"
      aria-invalid="false"
      aria-required="false"
      class="gap-3 flex flex-col space-y-1"
      data-slot="form-control"
      dir="ltr"
      id="_r_4_-form-item"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 1"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 1"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 1"
        >
          Option 1
        </label>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 2"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 2"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 2"
        >
          Option 2
        </label>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          class="aspect-square size-4 shrink-0 rounded-full border border-input text-primary shadow-xs transition-[color,box-shadow] outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:bg-input/30 dark:aria-invalid:ring-destructive/40"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="name-1-Option 3"
          role="radio"
          tabindex="-1"
          type="button"
          value="Option 3"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="relative flex items-center justify-center"
              data-slot="radio-group-indicator"
              data-state="unchecked"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer font-normal peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="name-1-Option 3"
        >
          Option 3
        </label>
      </div>
    </div>
  </div>
</div>
`;
